--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -4,4 +4,7 @@
 body {
     padding: 0;
     margin: 0;
+    /* see https://semi.design/zh-CN/start/dark-mode */
+    color: var(--semi-color-text-0);
+    background-color: var( --semi-color-bg-0); 
 }
