wip module edit page

--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -7,6 +7,7 @@ body {
   /* see https://semi.design/zh-CN/start/dark-mode */
   color: var(--semi-color-text-0);
   background-color: var(--semi-color-bg-0);
+  display: block;
 }
 
 .background-svg {
