--- a/web-client/src/index.less
+++ b/web-client/src/index.less
@@ -7,6 +7,7 @@ body {
   /* see https://semi.design/zh-CN/start/dark-mode */
   color: var(--semi-color-text-0);
   background-color: var(--semi-color-bg-0);
+  background-image: url("./assets/background.svg");
   display: block;
 }
 
@@ -14,59 +15,16 @@ body {
   background-image: url("./assets/background.svg");
 }
 
-@scrollbar-stable: {
-    scrollbar-gutter: stable;
-}
-
-@scrollbar-preset: {
-    @scrollbar-stable();
-
-  &::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-    transition: all 0.3s;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: 0 0;
-    background-color: transparent;
-    width: fit-content;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    border-radius: 0.5rem;
-  }
-
-  &:hover::-webkit-scrollbar-thumb {
-    background-color: var(--semi-color-fill-0);
-    background-clip: content-box;
-  }
-
-  &::-webkit-scrollbar-corner {
-    background: 0 0;
-  }
-};
-
-.scrollbar-stable {
-    @scrollbar-stable();
-}
-
-.scrollbar-default {
-  @scrollbar-preset();
-}
-
 .semi-navigation-vertical .semi-navigation-header-list-outer {
   height: 100%;
   overflow: auto;
-
-  @scrollbar-preset();
 }
 
-.semi-tree-option-list {
-  box-sizing: border-box;
-  flex: 1;
-  padding: 8px 0;
-  overflow: hidden auto;
+// .semi-tree-option-list {
+//   box-sizing: border-box;
+//   flex: 1;
+//   padding: 8px 0;
+//   overflow: hidden auto;
 
-  @scrollbar-preset();
-}
+//   @scrollbar-preset();
+// }
