--- a/mobile-client/src/main.css
+++ b/mobile-client/src/main.css
@@ -3,3 +3,7 @@
 @import "@blueprintjs/core/lib/css/blueprint.css";
 /* include blueprint-icons.css for icon font support */
 @import "@blueprintjs/icons/lib/css/blueprint-icons.css";
+
+* {
+  --spacing: 0.25rem;
+}
