--- a/mobile-client/src-tauri/gen/android/app/src/main/res/values/themes.xml
+++ b/mobile-client/src-tauri/gen/android/app/src/main/res/values/themes.xml
@@ -1,6 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.mobileclient" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.MobileClient" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
+      <item name="android:navigationBarColor">
+        @android:color/transparent
+      </item>
     </style>
 </resources>
