--- a/mobile-client/src/main.css
+++ b/mobile-client/src/main.css
@@ -1,8 +1,7 @@
 /* using Node.js-style package resolution in a CSS file: */
 @import "normalize.css";
-@import "@blueprintjs/core/lib/css/blueprint.css";
-/* include blueprint-icons.css for icon font support */
-@import "@blueprintjs/icons/lib/css/blueprint-icons.css";
+@import "@less/mdui-react/mdui.css";
+@import "material-icons/iconfont/material-icons.css";
 
 * {
   --spacing: 0.25rem;
@@ -11,61 +10,5 @@
   --sab: env(safe-area-inset-bottom, 0px);
   --sal: env(safe-area-inset-left, 0px);
 
-  user-select: none;
-}
-
-/* Slide Left Transition */
-html:active-view-transition-type(slide-left) {
-  &::view-transition-old(main-content) {
-    animation: 300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-out-left;
-  }
-  &::view-transition-new(main-content) {
-    animation: 300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-in-left;
-  }
-}
-
-@keyframes slide-out-left {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-@keyframes slide-in-left {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-/* Slide Right Transition */
-html:active-view-transition-type(slide-right) {
-  &::view-transition-old(main-content) {
-    animation: 300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-out-right;
-  }
-  &::view-transition-new(main-content) {
-    animation: 300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-in-right;
-  }
-}
-
-@keyframes slide-out-right {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(100%);
-  }
-}
-
-@keyframes slide-in-right {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0);
-  }
+  /* user-select: none; */
 }
