change route to component tab

--- a/mobile-client/src/main.css
+++ b/mobile-client/src/main.css
@@ -1,8 +1,13 @@
 /* using Node.js-style package resolution in a CSS file: */
-@import "normalize.css";
+@import "@unocss/reset/sanitize/sanitize.css";
+@import "@unocss/reset/sanitize/assets.css";
 @import "@studylessshape/mdui-react/mdui.css";
 @import "material-icons/iconfont/material-icons.css";
 
 * {
   --spacing: 0.25rem;
+  --sat: env(safe-area-inset-top, 0px);
+  --sar: env(safe-area-inset-right, 0px);
+  --sab: env(safe-area-inset-bottom, 0px);
+  --sal: env(safe-area-inset-left, 0px);
 }
